package sanguo;

import "msg_id.proto";
import "msg_status_code.proto";

option optimize_for = LITE_RUNTIME;
option java_package = "com.cwa.sanguo.messages.system";
option java_outer_classname = "TestMessage";

message TestRequest {
    required MsgID  msgID = 1;
    required string content = 2; // 测试数据
}

message TestResponse {
    required MsgID      msgID  = 1;
    required string content = 2; // 测试数据原样返回
}
